added gateway + proxy + pm2 config + sdk to new front-ssr

--- a/apps/greenpress/package.json
+++ b/apps/greenpress/package.json
@@ -14,7 +14,8 @@
     "@greenpress/admin": "^2.0.17",
     "@greenpress/assets": "^2.0.15",
     "@greenpress/auth": "^2.0.15",
-    "@greenpress/blog-front": "^2.0.17",
+    "@greenpress/front-ssr": "^2.0.17",
+    "@greenpress/gateway": "^2.0.17",
     "@greenpress/content": "^2.0.17",
     "@greenpress/drafts": "^2.0.15",
     "@greenpress/pm2-launcher": "^2.0.10",
